Update the README files for header and footer
The README files for header and footer patterns were updated

--- a/index.html
+++ b/index.html
@@ -1115,6 +1115,12 @@
       </nav>
   </div>
 
+      <div class="pattern-desc milli island" >
+        <div class="max-length"><p>The footer of a page consists of secondary navigation, details pertaining to the brand/e-commerce site. It can also contain a subscription field for newsletter, promotion for users to stay on top of sales, trends, etc.,
+It consists of secondary navigation and copyright notices.
+Use the footer pattern on all pages.</p>
+</div>
+      </div>
 
   
 
@@ -1145,6 +1151,12 @@
                 </li>
             </ul>
         </div>
+          <div class="pattern-desc milli island" style="">
+            <div class="max-length"><p>The footer of a page consists of secondary navigation, details pertaining to the brand/e-commerce site. It can also contain a subscription field for newsletter, promotion for users to stay on top of sales, trends, etc.,
+It consists of secondary navigation and copyright notices.
+Use the footer pattern on all pages.</p>
+</div>
+          </div>
 
       <div class="pattern-examples pad-t-1-2 pad-b-1-2" style="">
         <div class="gutter-2 pad-t-1-2 pad-b-1-2">
@@ -1231,6 +1243,10 @@
                 </li>
             </ul>
         </div>
+          <div class="pattern-desc milli island" style="">
+            <div class="max-length"><p>It consists of subscribe links for newsletter subscriptions.</p>
+</div>
+          </div>
 
       <div class="pattern-examples pad-t-1-2 pad-b-1-2" style="">
         <div class="gutter-2 pad-t-1-2 pad-b-1-2">
@@ -1262,8 +1278,8 @@
               <code><pre id="footer-subscribe-footer-code-sample-copy-chunk">&lt;div class="subscribe"&gt;
   &lt;form>
     &lt;label for="email">Email&lt;/label>
-    &lt;input type="email" id="email" required aria-describedby="email-error">
-    &lt;button class="btn" type="submit">Submit&lt;/button>
+    &lt;input type="email" plaeholder="abc@gmail.com" id="email" required aria-describedby="email-error">
+    &lt;button class="btn" type="submit">Subscribe&lt;/button>
     &lt;p class="error-message milli island-1-4 push-0" id="email-error">
       &lt;i class="icon i-16">&lt;svg>&lt;use xlink:href="../../images/icons.svg#warning"/>&lt;/svg>&lt;/i>
       &lt;span class="icon-label">Please provide a properly formatted email address&lt;/span>
@@ -1994,6 +2010,12 @@ Use in payment gateways.</p>
         </ul>
   </div>
 
+    <div class="pattern-desc milli island" style="">
+      <div class="max-length"><p>Header</p>
+<p>The header of a page consists of the logo and primary navigation for brand recognition and easy navigation.
+Use the header pattern on all pages.</p>
+</div>
+    </div>
 
   
 
