--- a/patterns/footer/subscribe-footer.html
+++ b/patterns/footer/subscribe-footer.html
@@ -8,6 +8,7 @@
   <link href="../../common/grid.css" rel="stylesheet">
   <link href="../../common/type.css" rel="stylesheet">
   <link href="../../common/theme.css" rel="stylesheet">
+    <link href="../buttons/buttons.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,700" rel="stylesheet">
   <link href="footer.css" rel="stylesheet">
 </head>
@@ -16,8 +17,8 @@
   <div class="subscribe">
     <form>
       <label for="email">Email</label>
-      <input type="email" id="email" required aria-describedby="email-error">
-      <button class="btn" type="submit">Submit</button>
+      <input type="email" plaeholder="abc@gmail.com" id="email" required aria-describedby="email-error">
+      <button class="btn" type="submit">Subscribe</button>
       <p class="error-message milli island-1-4 push-0" id="email-error">
         <i class="icon i-16"><svg><use xlink:href="../../images/icons.svg#warning" /></svg></i>
         <span class="icon-label">Please provide a properly formatted email address</span>
