Fix the Indentation errors

--- a/index.html
+++ b/index.html
@@ -859,7 +859,7 @@
                   <svg><use xlink:href="#icon-copy"></use></svg>
                 </i>
               </button>
-              <code><pre id="banners-main-banners-code-sample-copy-chunk">&lt;div class="home-banner" href="#"&gt;
+              <code><pre id="banners-main-banners-code-sample-copy-chunk">&lt;div class="home-banner"&gt;
   &lt;div class="main-img">
     &lt;h1 class="text-s text-m text-l">Think food.&lt;/h1>
     &lt;img class="img-flex" src="../../images/banner.jpg" aria-label="Image of a girl in red graphic t-shirt that reads Tomato soup" alt="">
