--- a/patterns/banners/main-banners.html
+++ b/patterns/banners/main-banners.html
@@ -2,7 +2,7 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title>Banners</title>
+  <title>Main Banner</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="../../common/modules.css" rel="stylesheet">
   <link href="../../common/grid.css" rel="stylesheet">
@@ -13,7 +13,7 @@
 </head>
 <body>
 
-  <div class="home-banner" href="#">
+  <div class="home-banner">
     <div class="main-img">
       <h1 class="text-s text-m text-l">Think food.</h1>
       <img class="img-flex" src="../../images/banner.jpg" aria-label="Image of a girl in red graphic t-shirt that reads Tomato soup" alt="">
